--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 <style>
   :root{ --bg:#0f1220; --panel:#171a2b; --muted:#9aa4b2; --text:#e8ecf1;
          --card:#1b2035; --btn:#232845; --ring:#2a7fff55; --danger:#ff7b7b; }
-  *{box-sizing:border-box}
-  html,body{height:100%}
+  *{box-sizing:border-box} html,body{height:100%}
   body{margin:0;background:linear-gradient(120deg,#0f1220,#0e1428 60%,#0f1220);
        color:var(--text);font:500 16px/1.45 ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial}
   header{padding:12px 16px;border-bottom:1px solid #202540;background:rgba(17,22,36,.7);
@@ -28,10 +27,8 @@
     border-radius:10px;padding:8px 10px;outline:none
   }
   input[type="number"]{width:120px}
-  button{
-    background:var(--btn);border:1px solid #2a3156;color:var(--text);padding:9px 12px;border-radius:11px;
-    cursor:pointer;transition:.15s;user-select:none
-  }
+  button{background:var(--btn);border:1px solid #2a3156;color:var(--text);padding:9px 12px;border-radius:11px;
+         cursor:pointer;transition:.15s;user-select:none}
   button:hover{transform:translateY(-1px);box-shadow:0 6px 18px -10px #000,0 0 0 2px var(--ring)}
   button.danger{background:#3a1b1b;border-color:#5a2a2a;color:#ffc6c6}
   .chip{font-size:12px;border:1px solid #2a3156;border-radius:999px;padding:4px 9px;color:#9aa4b2;display:inline-flex;gap:6px;align-items:center}
@@ -39,17 +36,17 @@
   .grad{width:220px;height:12px;border-radius:999px;border:1px solid #2a3156}
   .grid{display:grid;grid-template-columns:repeat(2,1fr);gap:8px}
   .kbd{font-family:ui-monospace,Menlo,Consolas,monospace;background:#222846;border:1px solid #2a3156;border-radius:6px;padding:2px 6px;color:#b9c3ff;font-size:12px}
-  .muted{color:var(--muted)}
-  .badge{font-size:12px;padding:4px 8px;border-radius:999px;background:#22284a;border:1px solid #2a3156}
+  .muted{color:var(--muted)} .badge{font-size:12px;padding:4px 8px;border-radius:999px;background:#22284a;border:1px solid #2a3156}
   .small{font-size:12px}
   .apRow,.matRow{display:flex;justify-content:space-between;gap:8px;align-items:center;background:#141a34;border:1px solid #2a3156;border-radius:10px;padding:6px 8px}
   .dot{width:10px;height:10px;border-radius:50%}
   @media (max-width:980px){ .container{grid-template-columns:1fr} }
 
   /* canvases stack */
-  .stage{position:relative;display:inline-block}
+  .stage{position:relative;display:inline-block;overflow:hidden;border-radius:12px;border:1px solid #242a49}
   #canvas,#overlay{display:block}
   #overlay{position:absolute; left:0; top:0; pointer-events:none; z-index:3;}
+
   /* probe tooltip */
   #probe{position:absolute;display:none;transform:translate(10px,-10px);
          background:#0e1329;border:1px solid #2a3156;border-radius:10px;padding:6px 8px;
@@ -58,25 +55,10 @@
   #probe .sw{display:inline-block;width:10px;height:10px;border-radius:50%;margin-right:6px;border:1px solid #0006}
   #probe .sub{font-weight:500;color:#9aa4b2;margin-top:2px}
 
-  /* mode picker overlay (startup) */
-  #modePicker{
-    position:fixed; inset:0; background:linear-gradient(180deg, rgba(5,8,22,.85), rgba(10,14,34,.85));
-    display:flex; align-items:center; justify-content:center; z-index:80;
-  }
-  .pickerBox{
-    background:#141a2e;border:1px solid #2a3156;border-radius:16px;padding:22px;max-width:520px;width:92%;
-    box-shadow:0 18px 60px rgba(0,0,0,.45)
-  }
-  .pickerTitle{font-size:18px;margin:0 0 12px}
-  .pickerRow{display:flex;gap:12px;flex-wrap:wrap}
-  .pickBtn{flex:1;min-width:180px;padding:16px;border-radius:14px;border:1px solid #2a3156;background:#1b2141;color:#e8ecf1;cursor:pointer}
-  .pickBtn:hover{transform:translateY(-1px);box-shadow:0 6px 20px rgba(0,0,0,.35)}
-  .pickHint{font-size:12px;color:#9aa4b2;margin-top:10px}
   /* Survey placeholder */
-  .surveyBlank{
-    background:#ffffff;border-radius:12px;border:1px dashed #cccccc; min-height:300px;
-    display:flex;align-items:center;justify-content:center;color:#333;font:600 18px/1.3 ui-sans-serif,system-ui
-  }
+  .surveyBlank{background:#ffffff;border-radius:12px;border:1px dashed #cccccc; min-height:300px;
+    display:flex;align-items:center;justify-content:center;color:#333;font:600 18px/1.3 ui-sans-serif,system-ui}
+  .zoombar{display:flex;gap:6px}
 </style>
 </head>
 <body>
@@ -88,26 +70,22 @@
   </div>
 </header>
 
-<!-- Startup picker -->
-<div id="modePicker">
-  <div class="pickerBox">
-    <h2 class="pickerTitle">เลือกโหมดการทำงาน</h2>
-    <div class="pickerRow">
-      <button class="pickBtn" id="pickPlanning">🛠️ Planning — วาง AP / วัสดุ / สร้าง Heatmap</button>
-      <button class="pickBtn" id="pickSurvey">🧪 Survey — (เริ่มว่างเปล่า) พัฒนาต่อภายหลัง</button>
-    </div>
-    <div class="pickHint">สามารถสลับโหมดได้ที่มุมขวาบนตลอดเวลา</div>
-  </div>
-</div>
-
+<!-- Planning -->
 <div class="container" id="appPlanning" style="display:grid">
-  <!-- Left control panel (Planning) -->
   <aside class="panel">
     <div class="section">
       <div class="label">1) อัปโหลดแปลนพื้นที่ (PNG/JPG)</div>
       <div class="row">
         <input type="file" id="fileInput" accept="image/*"/>
         <button id="btnClear">ล้าง</button>
+      </div>
+      <div class="row" style="margin-top:6px;justify-content:space-between">
+        <div class="small muted">ใช้ล้อเมาส์ซูม • Space+ลาก = แพน • รีเซ็ตวิว</div>
+        <div class="zoombar">
+          <button id="btnZoomOut">−</button>
+          <button id="btnZoomReset">100%</button>
+          <button id="btnZoomIn">+</button>
+        </div>
       </div>
     </div>
 
@@ -127,7 +105,7 @@
         <select id="apPreset" style="min-width:220px"><option value="">(กำลังโหลดพรีเซ็ต...)</option></select>
         <button id="btnUsePreset">ใช้พรีเซ็ต</button>
       </div>
-      <div class="small muted">พรีเซ็ตโหลดจากไฟล์ <code>ap_presets.json</code> ใน repo (แก้ไข/เพิ่มได้)</div>
+      <div class="small muted">ไฟล์ <code>ap_presets.json</code> ที่โฟลเดอร์เดียวกับหน้านี้</div>
     </div>
 
     <div class="section">
@@ -152,7 +130,7 @@
         <button id="btnAPClear" class="danger">🗑️ ล้าง AP ทั้งหมด</button>
       </div>
       <div id="apList" style="margin-top:10px;display:grid;gap:6px;"></div>
-      <div class="small muted">วางได้หลาย AP — ระบบรวมกำลัง (mW) แล้วแปลงเป็น dBm</div>
+      <div class="small muted">หลาย AP ได้ — ระบบรวมกำลัง (mW) แล้วแปลงเป็น dBm</div>
     </div>
 
     <div class="section">
@@ -207,11 +185,10 @@
     </div>
 
     <div class="section small muted">
-      คีย์ลัด: <span class="kbd">S</span> สเกล • <span class="kbd">A</span> วาง AP • <span class="kbd">W</span> วัสดุ • <span class="kbd">H</span> เรนเดอร์ • <span class="kbd">Esc</span> เม้าส์ปกติ
+      คีย์ลัด: <span class="kbd">S</span> สเกล • <span class="kbd">A</span> วาง AP • <span class="kbd">W</span> วัสดุ • <span class="kbd">H</span> เรนเดอร์ • <span class="kbd">Esc</span> เม้าส์ปกติ • ล้อเมาส์ซูม • Space+ลาก = แพน
     </div>
   </aside>
 
-  <!-- Right workspace (Planning) -->
   <main class="panel">
     <div class="row">
       <span class="badge" id="modeBadge">โหมด: Idle</span>
@@ -229,7 +206,7 @@
   </main>
 </div>
 
-<!-- Survey mode layout (placeholder) -->
+<!-- Survey (placeholder) -->
 <div class="container" id="appSurvey" style="display:none;grid-template-columns:1fr">
   <main class="panel" style="display:flex;flex-direction:column;gap:12px">
     <div class="row">
