--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </head>
 <body>
 <header>
-  <h1>📶 Wi-Fi Heatmap</h1>
+  <h1>แป้งโชไวไฟ888</h1>
   <div class="mode-switch">
     <div class="pill active" id="pillPlanning">Planning</div>
     <div class="pill" id="pillSurvey">Survey</div>
